[package]
name = "lyscm_rpi_gpio-pins"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.0"
dotenv = "0.15.0"
tonic = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.10"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = "0.7"
