[package]
name = "light-emitting-diode"
version = "0.1.0"
authors = ["qcteq <qcteqcr-environment-builder@qcteq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.12.0"
actix-web = "3.3.2"
listenfd = "0.3"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"